// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Fieldset> properly with defaultProps 1`] = `
<fieldset
  class="Fieldset__Wrapper-sc-5lzkti-0 fmtGwM"
>
  Lorem ipsum dolor sit amet
</fieldset>
`;

exports[`Renders <Fieldset> properly with provided legend props 1`] = `
<fieldset
  class="Fieldset__Wrapper-sc-5lzkti-0 fmtGwM"
>
  <legend>
    Test frame
  </legend>
  Lorem ipsum dolor sit amet
</fieldset>
`;
